# net-runner

./: .gitignore  .railwayignore  Dockerfile  Dockerfile.combined  Dockerfile.remediation  pyproject.toml  railway.toml  render.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  react-simple-maps.d.ts  theme.ts  types.ts
frontend/src/components/: AlertConsole.tsx  BottomNav.tsx  BottomSheet.tsx  ChaosPanel.tsx  ChoroplethView.tsx  Dashboard.tsx  DevicePanel.tsx  ErrorBoundary.tsx  Led.tsx  RemediationPanel.tsx  TopologyView.tsx
frontend/src/hooks/: useIsMobile.ts  useRemediation.ts  useSimulation.ts
frontend/src/utils/: siteHealth.ts
net_runner/: api_sim.py  catalog.py  models.py  sim.py
net_runner/api/: app.py
remediation/: __init__.py  agent.py  connector.py  engine.py  main.py  ml.py  models.py  rules.py  schema.py
