[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "net-runner"
version = "0.1.0"
description = "Probabilistic IT infrastructure simulator for a 10K-person org"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "networkx>=3.4",
    "numpy>=2.1",
    "scipy>=1.14",
    "websockets>=13.1",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[project.scripts]
net-runner = "net_runner.api.app:main"

[tool.ruff]
line-length = 100
target-version = "py312"
